Fix height of app to fit on mobile screens (with dvh vs vh)

--- a/src/client/styles/base/reset.css
+++ b/src/client/styles/base/reset.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  height: 100dvh;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
